# mathllm

./: .gitignore  CHANGELOG.md  README.md
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  bench_symbolic.cpp
cpp/bindings/: pybind.cpp
cpp/include/mathllm/: errors.hpp  numeric.h  ode.h  symbolic.h  units.h  verifier.h
cpp/src/: cli.cpp  numeric.cpp  ode.cpp  symbolic.cpp  units.cpp  verifier.cpp
cpp/tests/: CMakeLists.txt  test_errors.cpp  test_numeric.cpp  test_ode.cpp  test_python_exceptions.py  test_symbolic.cpp  test_units.cpp
docs/: concise_mode.md  engineering_mode.md  explain_mode.md  local_student_deployment.md  models_student.md  notes.md  phase_a_deliverables.md  phase_b_deliverables.md  sprint4_report.md  sprint6_deliverables.md  sprint7_deliverables.md
docs/eval/: README.md
env/: student.example.env  talker.example.env
eval/runs/: stub_run.json  stub_run_sr.json
eval/scripts/: run_bench.py
perf/: .env.example  QUICK_REF.txt  README.md  SPRINT_STATUS.txt  benchmark.py  commands.sh  healthcheck.py  mock_server.py  perf.md  phase_b_tuning.py  phase_c_speculative.py  phase_d_talker.py  phase_e_telemetry.py  phase_f_cache.py  run_phases.py  setup.sh  smoke_test.py  start_student.sh  start_talker.sh
python/: requirements.txt
python/api/: server.py
python/src/mathllm/: __init__.py  compile.py  concise.py  distill.py  evaluation.py  explain.py  guard.py  latex.py  llm_student.py  llm_teacher.py  mir.py  orchestrator.py  planner.py  policy.py  preference.py  router.py  tool_runtime.py  units.py  verify.py
python/tests/: test_concise.py  test_distill.py  test_explain.py  test_import.py  test_policy.py  test_preference.py
python/train/: train_dpo.py  train_kd.py
python/train/configs/: dpo.yaml  kd.yaml  teacher.yaml
python/ui/: app.py
tests/: conftest.py  test_engineering.py  test_pipeline.py
